[xmobar] Corrected ethernet inferface

--- a/.xmobarrc
+++ b/.xmobarrc
@@ -3,7 +3,7 @@ Config { font = "xft:inconsolata:size=11:antialias=true"
        , fgColor = "#657b83"
        , position = Top
        , lowerOnStart = True
-       , commands = [ Run Network "wlan0" ["-L","0","-H","32","--normal","green","--high","red"] 10
+       , commands = [ Run Network "enp4s0" ["-L","0","-H","32","--normal","green","--high","red"] 10
                     , Run Cpu ["-L","3","-H","50","--normal","green","--high","red"] 10
                     , Run Memory ["-t","Mem: <usedratio>%"] 10
                     , Run Date "<fc=#93a1a1>%a %b %_d %Y %H:%M</fc>" "date" 10
@@ -12,5 +12,5 @@ Config { font = "xft:inconsolata:size=11:antialias=true"
                     ]
        , sepChar = "%"
        , alignSep = "}{"
-       , template = "%StdinReader% }{ %cpu%  %memory%  %wlan0%  %diskio%  %date%"
+       , template = "%StdinReader% }{ %cpu%  %memory%  %enp4s0%  %diskio%  %date%"
        }
