--- a/.xmobarrc
+++ b/.xmobarrc
@@ -3,14 +3,14 @@ Config { font = "xft:inconsolata:size=11:antialias=true"
        , fgColor = "#657b83"
        , position = Top
        , lowerOnStart = True
-       , commands = [ Run Network "enp4s0" ["-L","0","-H","32","--normal","green","--high","red"] 10
-                    , Run Cpu ["-L","3","-H","50","--normal","green","--high","red"] 10
-                    , Run Memory ["-t","Mem: <usedratio>%"] 10
+       , commands = [ Run Network "enp4s0" ["-L","0","-H","32","--normal","#859900","--high","#DC322F"] 10
+                    , Run MultiCpu ["-t","cpu: <total0> <total1> <total2> <total3>","-L","30","-H","60","-h","#DC332F","-l","#839496","-n","#BF8900","-w","3"] 10
+                    , Run Memory ["-t","mem: <usedratio>%"] 10
                     , Run Date "<fc=#93a1a1>%a %b %_d %Y %H:%M</fc>" "date" 10
-                    , Run DiskIO [("/", "IO: <total>"), ("sda4", "<total>")] [] 10
+                    , Run DiskIO [("/", "io: <total>"), ("sda4", "<total>")] [] 10
                     , Run StdinReader
                     ]
        , sepChar = "%"
        , alignSep = "}{"
-       , template = "%StdinReader% }{ %cpu%  %memory%  %enp4s0%  %diskio%  %date%"
+       , template = "%StdinReader% }{ %multicpu%  %memory%  %enp4s0%  %diskio%  %date%"
        }
